# vocloud-deeplearning

./: .gitignore  CMakeLists.txt  readme.md  version.hxx  vodigger.cxx  vodigger.hxx
inputs/: CMakeLists.txt  feeder.hxx  feeder_csv.cxx  feeder_csv.hxx  feeder_factory.cxx  feeder_factory.hxx  feeder_fits.cxx  feeder_leveldb.cxx  feeder_leveldb.hxx  source.hxx  source_factory.cxx  source_factory.hxx  source_folder.cxx  source_folder.hxx
models/: 2layers.prototxt  raw1997.prototxt
solvers/: CMakeLists.txt  cpu.prototxt  raw1997.prototxt  solver.hxx  solver_caffe.cxx  solver_caffe.hxx  solver_caffe_sdg.cxx  solver_caffe_sdg.hxx  solver_caffe_wrapper.hxx
utils/: CMakeLists.txt  config.cxx  config.hxx  string.cxx  string.hxx
